feat: update post config

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "eslint-config-next": "15.1.7",
     "@eslint/eslintrc": "3.3.0",
     "prettier": "3.5.2",
-    "prettier-plugin-packagejson": "^2.5.8"
+    "prettier-plugin-packagejson": "^2.5.8",
+    "@tailwindcss/postcss": "4.0.8"
   },
   "packageManager": "pnpm@9.15.3+sha512.1f79bc245a66eb0b07c5d4d83131240774642caaa86ef7d0434ab47c0d16f66b04e21e0c086eb61e62c77efc4d7f7ec071afad3796af64892fae66509173893a"
 }
