--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-isr-demo",
+  "name": "nextjs-isr-demo-2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,18 +14,15 @@
     "next": "15.1.7"
   },
   "devDependencies": {
-    "typescript": "5.7.3",
-    "@types/node": "22.13.5",
-    "@types/react": "19.0.10",
-    "@types/react-dom": "19.0.4",
-    "postcss": "8.5.3",
-    "tailwindcss": "4.0.8",
-    "eslint": "9.21.0",
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "@eslint/eslintrc": "3.3.0",
-    "prettier": "3.5.2",
-    "prettier-plugin-packagejson": "^2.5.8",
-    "@tailwindcss/postcss": "4.0.8"
+    "@eslint/eslintrc": "^3"
   },
   "packageManager": "pnpm@9.15.3+sha512.1f79bc245a66eb0b07c5d4d83131240774642caaa86ef7d0434ab47c0d16f66b04e21e0c086eb61e62c77efc4d7f7ec071afad3796af64892fae66509173893a"
 }
