--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.7",
-    "ioredis": "^5.4.1"
+    "next": "15.1.7"
   },
   "devDependencies": {
     "typescript": "^5",
